モックのポリシーグループの仕様に合わせて変更
